--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,13 +1,53 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Montserrat', 'sans-serif';
+  font-size: 15px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.profileCard {
+  background-color: white;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-radius: 30px;
+  padding: 30px 50px 0px -50px;
+  height: 80vh;
+  line-height:20px  
+}
+.defaultCard {
+  background-color: white;
+  box-shadow: 0px 4px 10px -1px rgba(0, 0, 0, 0.25);
+  border-radius: 30px;
+  padding: 30px 50px 50px 50px;
+  margin-bottom: 50px
+}
+
+.cardTitle {
+  font-size:25px;
+  font-weight:600;
+  margin: 0 0 1vw 0;
+}
+
+.profileName {
+  font-size:250%;
+  font-weight: 600;
+  font-family: 'Montserrat', 'sans-serif';
+  margin: 0 0 9px 0
+}
+
+.profileTitle {
+  font-weight: 400;
+  font-size: 115%;
+}
+
+
+.profileHeader {
+  margin-left:6vw;
+  height:6vw;
+  padding: 1.9vw 0vw 0 5px;
+
 }
